optimize editor style and fix nightshift boader bug

--- a/app/styles/patterns/global.css
+++ b/app/styles/patterns/global.css
@@ -159,7 +159,8 @@ body {
 }
 
 ::selection {
-    background: color-mod(var(--blue) lightness(+20%));
+    /* background: color-mod(var(--blue) lightness(+20%)); */
+    background: var(--input-bg-color);
 }
 
 
